// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - File Card renders correctly 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      >
        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





        <svg
          class="mt-1 icon--file bi icon--xl"
        >
          <use
            xlink:href="/icons.svg#file-pdf-fill"
          />
        </svg>
      </div>
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
            download="true"
            href="/example.html"
            target="_blank"
          >
            Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="bg-lighter py-3 px-4 border-top"
    >
      <div
        class="text-end text-md-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="standalone bcl-link"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="ms-2-5 bi icon--2xs"
          >
            <use
              xlink:href="/icons.svg#caret-down-fill"
            />
          </svg>
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <p
                class="fw-bold m-0"
              >
                File title FR
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <small
                class="fw-bold m-0"
              >
                Français
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <p
                class="fw-bold m-0"
              >
                File title ES
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <small
                class="fw-bold m-0"
              >
                Español
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <p
                class="fw-bold m-0"
              >
                File title BG
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <small
                class="fw-bold m-0"
              >
                български
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="pt-3"
        >
          <p
            class="mb-2 d-inline-block me-2"
          >
            Looking for another language which is not on the list? 
          </p>
          <a
            href="/example.html"
          >
            Find out why.
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with title 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    File card test title
  </h6>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      >
        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





        <svg
          class="mt-1 icon--file bi icon--xl"
        >
          <use
            xlink:href="/icons.svg#file-pdf-fill"
          />
        </svg>
      </div>
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
            download="true"
            href="/example.html"
            target="_blank"
          >
            Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="bg-lighter py-3 px-4 border-top"
    >
      <div
        class="text-end text-md-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="standalone bcl-link"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="ms-2-5 bi icon--2xs"
          >
            <use
              xlink:href="/icons.svg#caret-down-fill"
            />
          </svg>
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <p
                class="fw-bold m-0"
              >
                File title FR
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <small
                class="fw-bold m-0"
              >
                Français
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <p
                class="fw-bold m-0"
              >
                File title ES
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <small
                class="fw-bold m-0"
              >
                Español
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <p
                class="fw-bold m-0"
              >
                File title BG
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <small
                class="fw-bold m-0"
              >
                български
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="pt-3"
        >
          <p
            class="mb-2 d-inline-block me-2"
          >
            Looking for another language which is not on the list? 
          </p>
          <a
            href="/example.html"
          >
            Find out why.
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        >
          &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="mt-1 icon--file bi icon--xl"
          >
            <use
              xlink:href="/icons.svg#file-pdf-fill"
            />
          </svg>
        </div>
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
            download="true"
            href="/example.html"
            target="_blank"
          >
            Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="bg-lighter py-3 px-4 border-top"
    >
      <div
        class="text-end text-md-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="standalone bcl-link"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="ms-2-5 bi icon--2xs"
          >
            <use
              xlink:href="/icons.svg#caret-down-fill"
            />
          </svg>
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                български
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="http://www.africau.edu/images/default/sample.pdf"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                Español
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                Français
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="pt-3"
        >
          <p
            class="mb-2"
          >
            Looking for another language which is not on the list? 
          </p>
          <a
            class="d-block"
            href="/example.html"
          >
            Find out why.
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly with new class on translation 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        >
          &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="mt-1 icon--file bi icon--xl"
          >
            <use
              xlink:href="/icons.svg#file-pdf-fill"
            />
          </svg>
        </div>
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
            download="true"
            href="/example.html"
            target="_blank"
          >
            Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="new-class bg-lighter py-3 px-4 border-top"
    >
      <div
        class="text-end text-md-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="standalone bcl-link"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="pt-3"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                български
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="http://www.africau.edu/images/default/sample.pdf"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly with title and link 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    <a
      class="bcl-link standalone"
      href="/example.html"
    >
      File test title
    </a>
  </h6>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        >
          &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="mt-1 icon--file bi icon--xl"
          >
            <use
              xlink:href="/icons.svg#file-pdf-fill"
            />
          </svg>
        </div>
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
            download="true"
            href="/example.html"
            target="_blank"
          >
            Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="bg-lighter py-3 px-4 border-top"
    >
      <div
        class="text-end text-md-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="standalone bcl-link"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





          <svg
            class="ms-2-5 bi icon--2xs"
          >
            <use
              xlink:href="/icons.svg#caret-down-fill"
            />
          </svg>
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                български
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="http://www.africau.edu/images/default/sample.pdf"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                Español
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md-9"
            >
              <small
                class="fw-bold m-0"
              >
                Français
                <span
                  class="fw-normal"
                >
                   (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-12 col-md-3 align-self-end text-md-end"
            >
              <a
                class="d-block standalone mt-1 bcl-link"
                download="true"
                href="/example.html"
                target="_blank"
              >
                Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="/icons.svg#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="pt-3"
        >
          <p
            class="mb-2"
          >
            Looking for another language which is not on the list? 
          </p>
          <a
            class="d-block"
            href="/example.html"
          >
            Find out why.
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
